--- a/src/shared/components/cards/card-line-chart/card-line-chart.component.css
+++ b/src/shared/components/cards/card-line-chart/card-line-chart.component.css
@@ -20,7 +20,7 @@
 }
 
 .titulo {
-  font-size: 2rem;
+  font-size: 1rem;
   font-weight: bold;
   text-align: center;
 }
@@ -44,7 +44,11 @@
 }
 
 .mar{
-  margin-top: 50px;
+  margin-top: 25px;
+  margin-bottom: 50px;
+}
+.mar2{
+  margin-top: 30px;
 }
 .espacio{
   margin-top: 25px;
