--- a/src/shared/components/cards/card-line-chart/card-line-chart.component.html
+++ b/src/shared/components/cards/card-line-chart/card-line-chart.component.html
@@ -38,87 +38,96 @@
         </div>
       </div>
     </div>
-   
+   </div>
     
-    
+    <br>
     <div class="grid gap-4 grid-cols-2">
       <div>
-        <div class="tamaño">
-          <canvas  baseChart
+        <div class="relative flex flex-col min-w-0 break-words bg-white w-full mb-6 shadow-lg rounded">
+          <div class="titulo"><h2>Programas Sociales</h2></div>
+          <div class="tamaño">
+            <canvas  baseChart
               [data]="pieChartData"
               [labels]="pieChartData.labels"
               [options]="pieChartOptions"
               [legend]="pieChartLegend"
               [type]="pieChartType"
               class="w-full h-full">
-          </canvas>
-        </div>
+            </canvas>
+          </div>
+      </div>
       </div>
       <div>
-        <div class="tamaño">
-          <canvas  baseChart
+        <div class="relative flex flex-col min-w-0 break-words bg-white w-full mb-6 shadow-lg rounded">
+          <div class="titulo"><h2>Beneficios entregadas</h2></div>
+          <div class="tamaño">
+           <canvas  baseChart
                 [data]="pieChartData3"
                 [labels]="pieChartData.labels"
                 [options]="pieChartOptions3"
                 [legend]="pieChartLegend3"
                 [type]="pieChartType3"
                 class="w-full h-full">
-          </canvas>
+           </canvas>
+          </div>
         </div>
       </div>
       <div>
-
-        <div class="container mx-auto p-4 mar">
-          <table class="min-w-full bg-white border border-gray-300">
-            <thead>
-              <tr>
-                <th class="py-2 px-4 border-b"> </th>
-                <th class="py-2 px-4 border-b">Asistencia Social</th>
-                <th class="py-2 px-4 border-b">Asistencia Jurídica</th>
-                <th class="py-2 px-4 border-b">Asistencia Alimentaria</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td class="py-2 px-4 border-b">2018</td>
-                <td class="py-2 px-4 border-b">Beneficiados 100</td>
-                <td class="py-2 px-4 border-b">Beneficiados 200</td>
-                <td class="py-2 px-4 border-b">Beneficiados 180</td>
-              </tr>
-              <tr>
-                <td class="py-2 px-4 border-b">2019</td>
-                <td class="py-2 px-4 border-b">Beneficiados 150</td>
-                <td class="py-2 px-4 border-b">Beneficiados 280</td>
-                <td class="py-2 px-4 border-b">Beneficiados 200</td>
-              </tr>
-              <tr>
-                <td class="py-2 px-4 border-b">2020</td>
-                <td class="py-2 px-4 border-b">Beneficiados 200</td>
-                <td class="py-2 px-4 border-b">Beneficiados 300</td>
-                <td class="py-2 px-4 border-b">Beneficiados 250</td>
-              </tr>
-            </tbody>
-          </table>
+        <br>
+        <div class="relative flex flex-col min-w-0 break-words bg-white w-full mb-6 shadow-lg rounded">
+          <div class="titulo mar2"><h2>Estadísticas de Asistencia Social por Área (2018-2020)</h2></div>
+          <div class="container mx-auto p-4 mar">
+            <table class="min-w-full bg-white border border-gray-300">
+              <thead>
+                <tr>
+                  <th class="py-2 px-4 border-b"> </th>
+                  <th class="py-2 px-4 border-b">Asistencia Social</th>
+                  <th class="py-2 px-4 border-b">Asistencia Jurídica</th>
+                  <th class="py-2 px-4 border-b">Asistencia Alimentaria</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td class="py-2 px-4 border-b">2018</td>
+                  <td class="py-2 px-4 border-b">Beneficiados 100</td>
+                  <td class="py-2 px-4 border-b">Beneficiados 200</td>
+                  <td class="py-2 px-4 border-b">Beneficiados 180</td>
+                </tr>
+                <tr>
+                  <td class="py-2 px-4 border-b">2019</td>
+                  <td class="py-2 px-4 border-b">Beneficiados 150</td>
+                  <td class="py-2 px-4 border-b">Beneficiados 280</td>
+                  <td class="py-2 px-4 border-b">Beneficiados 200</td>
+                </tr>
+                <tr>
+                  <td class="py-2 px-4 border-b">2020</td>
+                  <td class="py-2 px-4 border-b">Beneficiados 200</td>
+                  <td class="py-2 px-4 border-b">Beneficiados 300</td>
+                  <td class="py-2 px-4 border-b">Beneficiados 250</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
         </div>
-        
       </div>
       <div>
-        <div class="tamaño">
-          <canvas baseChart
+        <br>
+        <div class="relative flex flex-col min-w-0 break-words bg-white w-full mb-6 shadow-lg rounded">
+          <div class="titulo"><h2>Beneficiarios Satisfechos</h2></div>
+          <div class="tamaño">
+            <canvas baseChart
                   [data]="pieChartData2"
                   [labels]="pieChartData.labels"
                   [options]="pieChartOptions2"
                   [legend]="pieChartLegend2"
                   [type]="pieChartType2"
                   class="w-full h-full">
-          </canvas>
+            </canvas>
+          </div>
         </div>
       </div>
     </div>
-    
-    
     <br>
     <br>
     </div>
   </div>
-</div>
