--- a/src/app/pages/panel/Beneficiario/beneficiario.component.css
+++ b/src/app/pages/panel/Beneficiario/beneficiario.component.css
@@ -44,13 +44,14 @@
     color: #e53e3e; /* Rojo oscuro, ajusta el color según tus preferencias */
     font-size: 0.875rem; /* Ajusta el tamaño de fuente según tus preferencias */
 }
-#map-canvas {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 100vh;
-    z-index: 100; /* Ajusta el índice z para que sea menor que otros elementos en la página */
+.map-container {
+    position: relative;
+    z-index: 0;
+  }
+  
+  #map-canvas {
+    position: relative;
+    z-index: 1; /* Puedes ajustar este valor según sea necesario */
   }
   
   
