--- a/src/shared/components/cards/card-social-traffic/card-social-traffic.component.html
+++ b/src/shared/components/cards/card-social-traffic/card-social-traffic.component.html
@@ -215,38 +215,16 @@
                                                   </label>
                                                     <input id="searchInput" class="controls border-0 px-3 py-3 placeholder-blueGray-300 text-blueGray-600 bg-white rounded text-sm shadow focus:outline-none focus:ring w-full ease-linear transition-all duration-150" type="text" placeholder="Enter a location"
                                                     />
-
-                                                    <button type="submit" class="bg-purple-900 text-white py-2 px-4 rounded-md hover:bg-red-950" (click)="map()">
-                                                       direccion
-                                                       <!-- card-social-traffic.component.html -->
-<div class="flex flex-wrap">
-    <div class="w-full px-4">
-      <div
-        *ngIf="mostrarMapa"
-        class="relative flex flex-col min-w-0 break-words bg-white w-full mb-6 shadow-lg rounded"
-      >
-        <div
-          id="map-canvas"
-          class="relative w-full rounded h-600-px"
-          data-lat="19.316818295403003"
-          data-lng="-98.23837658175323"
-        ></div>
-      </div>
-    </div>
-    <button
-      type="submit"
-      class="bg-purple-900 text-white py-2 px-4 rounded-md hover:bg-red-950"
-      (click)="activarMapa()"
-    >
-      Dirección
-    </button>
-  </div>
-  
-                                                      </button>
-                                                    <button type="submit" class="bg-purple-900 text-white py-2 px-4 rounded-md hover:bg-red-950" (click)="mapa2()">
-                                                        latitud y longitud
-                                                       </button>
-
+                                                    <div class="flex flex-wrap">
+                                                        <div class="w-full px-4 mt-4">
+                                                            <div class="relative flex flex-col min-w-0 break-words bg-white w-full mb-6 shadow-lg rounded">
+                                                                <div id="map-canvas" class="relative w-full rounded h-600-px" data-lat="19.316818295403003" data-lng="-98.23837658175323"></div>
+                                                            </div>
+                                                        </div>
+                                                        <button type="submit" class="bg-purple-900 text-white py-2 px-4 rounded-md hover:bg-red-950" (click)="activarMapa()">
+                                                          Dirección
+                                                        </button>
+                                                    </div>
                                                 </div>
                                             </div>
                                         </div>
